# HW4

./: CMakeLists.txt  distributed_pcg.cpp  mpi_hello  mpi_hello.cpp  plots.ipynb  weak_scaling_N1.txt  weak_scaling_N2.txt
